# sdk

./: CHANGELOG.md  CMakeLists.txt  README.md  vix.json
.github/workflows/: ci.yml  release.yml
cmake/: sdk-cpp-config.cmake.in
docs/: client.md  discovery.md  errors.md  getting-started.md  local-store.md  metadata.md  persistence.md  sync.md  transport.md
examples/: 01_local_store.cpp  02_persistent_store.cpp  03_restart_recovery.cpp  04_sync_state.cpp  05_tick.cpp  06_transport.cpp  07_discovery.cpp  07_node_metadata.cpp  08_metadata.cpp
include/softadastra/: sdk.hpp
include/softadastra/sdk/: Client.hpp  ClientOptions.hpp  Error.hpp  Key.hpp  NodeInfo.hpp  Peer.hpp  Result.hpp  SyncState.hpp  TickResult.hpp  Value.hpp  Version.hpp
src/: Client.cpp  ClientImpl.cpp  ClientImpl.hpp  ClientOptions.cpp  Error.cpp  Key.cpp  NodeInfo.cpp  Peer.cpp  SyncState.cpp  TickResult.cpp  Value.cpp  Version.cpp
src/conversions/: DiscoveryConversions.cpp  DiscoveryConversions.hpp  MetadataConversions.cpp  MetadataConversions.hpp  StoreConversions.cpp  StoreConversions.hpp  SyncConversions.cpp  SyncConversions.hpp  TransportConversions.cpp  TransportConversions.hpp
src/internal/: ErrorMapper.cpp  ErrorMapper.hpp  Runtime.cpp  Runtime.hpp  RuntimeBuilder.cpp  RuntimeBuilder.hpp  RuntimeGuards.cpp  RuntimeGuards.hpp
tests/: CMakeLists.txt  ClientDiscoveryTests.cpp  ClientLifecycleTests.cpp  ClientMetadataTests.cpp  ClientOptionsTests.cpp  ClientRecoveryTests.cpp  ClientStoreTests.cpp  ClientSyncTests.cpp  ClientTransportTests.cpp  ErrorTests.cpp  KeyTests.cpp  ValueTests.cpp
